--- a/program/metaflow/mlflow.ipynb
+++ b/program/metaflow/mlflow.ipynb
@@ -2,9 +2,20 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 24,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n",
+      "The dotenv extension is already loaded. To reload it, use:\n",
+      "  %reload_ext dotenv\n"
+     ]
+    }
+   ],
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2\n",
@@ -14,47 +25,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import mlflow\n",
-    "import pandas as pd\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 56,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "payload = {\n",
-    "    \"island\": \"Biscoe\",\n",
-    "    \"culmen_length_mm\": 48.6,\n",
-    "    \"culmen_depth_mm\": 16.0,\n",
-    "    \"flipper_length_mm\": 230.0,\n",
-    "    \"body_mass_g\": 5800.0\n",
-    "}"
+    "import mlflow"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Load latest registered model"
+    "### Load latest registered model\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Model version: 49\n"
+      "Model version: 12\n"
      ]
     }
    ],
@@ -62,13 +56,58 @@
     "from mlflow import MlflowClient\n",
     "\n",
     "client = MlflowClient()\n",
-    "latest_model_version = client.search_model_versions(\"name='penguins'\", max_results=1, order_by=[\"last_updated_timestamp DESC\"])[0]\n",
+    "latest_model_version = client.search_model_versions(\n",
+    "    \"name='penguins'\",\n",
+    "    max_results=1,\n",
+    "    order_by=[\"last_updated_timestamp DESC\"],\n",
+    ")[0]\n",
     "print(f\"Model version: {latest_model_version.version}\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "payload1 = {\n",
+    "    \"island\": \"Biscoe\",\n",
+    "    \"culmen_length_mm\": 48.6,\n",
+    "    \"culmen_depth_mm\": 16.0,\n",
+    "    \"flipper_length_mm\": 230.0,\n",
+    "    \"body_mass_g\": 5800.0,\n",
+    "    \"sex\": \"MALE\",\n",
+    "}\n",
+    "\n",
+    "payload2 = [\n",
+    "    {\n",
+    "        \"island\": \"Biscoe\",\n",
+    "        \"culmen_length_mm\": 48.6,\n",
+    "        \"culmen_depth_mm\": 16.0,\n",
+    "        \"flipper_length_mm\": 230.0,\n",
+    "        \"body_mass_g\": 5800.0,\n",
+    "        \"sex\": \"MALE\",\n",
+    "    },\n",
+    "    {\n",
+    "        \"island\": \"Torgersen\",\n",
+    "        \"culmen_length_mm\": 44.1,\n",
+    "        \"culmen_depth_mm\": 18.0,\n",
+    "        \"flipper_length_mm\": 210.0,\n",
+    "        \"body_mass_g\": 4000,\n",
+    "    },\n",
+    "    {\n",
+    "        \"island\": \"Torgersen\",\n",
+    "        \"culmen_length_mm\": 39.1,\n",
+    "        \"culmen_depth_mm\": 18.7,\n",
+    "        \"flipper_length_mm\": 181.0,\n",
+    "        \"body_mass_g\": 3750,\n",
+    "    },\n",
+    "]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -79,18 +118,18 @@
       "Handling request...\n",
       "Transforming payload...\n",
       "Making a prediction using the transformed payload...\n",
-      "\u001b[1m1/1\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 34ms/step\n",
-      "{'predictions': [[0.015290366485714912, 0.0006110502872616053, 0.9840986132621765]]}\n",
+      "\u001b[1m1/1\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 29ms/step\n",
+      "{'predictions': [[0.0066620041616261005, 0.004577756859362125, 0.988760232925415]]}\n",
       "Processing prediction received from the model...\n",
-      "{'prediction': 'Gentoo', 'confidence': 0.9840986132621765}\n",
-      "{\"prediction\": \"Gentoo\", \"confidence\": 0.9840986132621765}\n"
+      "{'prediction': 'Gentoo', 'confidence': 0.988760232925415}\n",
+      "{\"prediction\": \"Gentoo\", \"confidence\": 0.988760232925415}\n"
      ]
     }
    ],
    "source": [
     "model = mlflow.pyfunc.load_model(latest_model_version.source)\n",
     "\n",
-    "prediction = model.predict(payload)\n",
+    "prediction = model.predict(payload2)\n",
     "print(prediction)"
    ]
   },
@@ -106,38 +145,102 @@
     "### Deploying the model locally\n",
     "\n",
     "```\n",
-    "$ mlflow models serve -m models:/penguins/42 -p 9876\n",
+    "$ mlflow models serve -m models:/penguins/42 -p 9876 --no-conda\n",
     "```\n",
-    "\n",
     "\n",
     "![image.png](attachment:image.png)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'predictions': '{\"prediction\": \"Gentoo\", \"confidence\": 0.9840986132621765}'}\n"
+      "{'predictions': [{'prediction': 'Gentoo', 'confidence': 0.997712254524231}, {'prediction': 'Adelie', 'confidence': 0.43495601415634155}, {'prediction': 'Adelie', 'confidence': 0.9739859700202942}]}\n"
      ]
     }
    ],
    "source": [
-    "import requests\n",
     "import json\n",
     "\n",
-    "payload2 = json.dumps({\n",
-    "    \"inputs\": [payload, payload]\n",
-    "})\n",
+    "import requests\n",
+    "\n",
+    "payload3 = json.dumps(\n",
+    "    {\n",
+    "        \"inputs\": [\n",
+    "            {\n",
+    "                \"island\": \"Biscoe\",\n",
+    "                \"culmen_length_mm\": 48.6,\n",
+    "                \"culmen_depth_mm\": 16.0,\n",
+    "                \"flipper_length_mm\": 230.0,\n",
+    "                \"body_mass_g\": 5800.0,\n",
+    "                \"sex\": \"MALE\",\n",
+    "            },\n",
+    "            {\n",
+    "                \"island\": \"Torgersen\",\n",
+    "                \"culmen_length_mm\": 44.1,\n",
+    "                \"culmen_depth_mm\": 18.0,\n",
+    "                \"flipper_length_mm\": 210.0,\n",
+    "                \"body_mass_g\": 4000,\n",
+    "                \"sex\": \"FEMALE\",\n",
+    "            },\n",
+    "            {\n",
+    "                \"island\": \"Torgersen\",\n",
+    "                \"culmen_length_mm\": 39.1,\n",
+    "                \"culmen_depth_mm\": 18.7,\n",
+    "                \"flipper_length_mm\": 181.0,\n",
+    "                \"body_mass_g\": 3750,\n",
+    "                \"sex\": \"MALE\",\n",
+    "            },\n",
+    "        ],\n",
+    "    },\n",
+    ")\n",
     "\n",
     "response = requests.post(\n",
-    "    url=\"http://127.0.0.1:9877/invocations\", \n",
+    "    url=\"http://127.0.0.1:9876/invocations\",\n",
     "    headers={\"Content-Type\": \"application/json\"},\n",
-    "    data=payload2\n",
+    "    data=payload3,\n",
+    ")\n",
+    "print(response.json())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'predictions': {}}\n"
+     ]
+    }
+   ],
+   "source": [
+    "payload4 = json.dumps(\n",
+    "    {\n",
+    "        \"inputs\": [\n",
+    "            {\n",
+    "                \"island\": \"Torgersen2\",\n",
+    "                \"culmen_length_mm\": 39.1,\n",
+    "                \"culmen_depth_mm\": 18.7,\n",
+    "                \"flipper_length_mm\": 181.0,\n",
+    "                \"body_mass_g\": 3750,\n",
+    "                \"sex\": \"MALE\",\n",
+    "            },\n",
+    "        ],\n",
+    "    },\n",
+    ")\n",
+    "\n",
+    "response = requests.post(\n",
+    "    url=\"http://127.0.0.1:9876/invocations\",\n",
+    "    headers={\"Content-Type\": \"application/json\"},\n",
+    "    data=payload4,\n",
     ")\n",
     "print(response.json())"
    ]
@@ -166,7 +269,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.11"
+   "version": "3.10.6"
   }
  },
  "nbformat": 4,
