--- a/program/metaflow/mlflow.ipynb
+++ b/program/metaflow/mlflow.ipynb
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -153,14 +153,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'predictions': [{'prediction': 'Gentoo', 'confidence': 0.997712254524231}, {'prediction': 'Adelie', 'confidence': 0.43495601415634155}, {'prediction': 'Adelie', 'confidence': 0.9739859700202942}]}\n"
+      "{'predictions': [{'prediction': 'Gentoo', 'confidence': 0.9905802607536316}, {'prediction': 'Adelie', 'confidence': 0.5539652109146118}, {'prediction': 'Adelie', 'confidence': 0.9887261986732483}]}\n"
      ]
     }
    ],
@@ -210,14 +210,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'predictions': {}}\n"
+      "{'predictions': [{'prediction': 'Adelie', 'confidence': 0.9802069067955017}]}\n"
      ]
     }
    ],
