--- a/program/metaflow/metaflow.ipynb
+++ b/program/metaflow/metaflow.ipynb
@@ -543,146 +543,96 @@
     }
    ],
    "source": [
-    "label_transformer.fit_transform(labels)"
+    "x=label_transformer.fit_transform(labels)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.compose import ColumnTransformer, make_column_selector\n",
+    "from sklearn.impute import SimpleImputer\n",
+    "from sklearn.pipeline import make_pipeline\n",
+    "from sklearn.preprocessing import OneHotEncoder, StandardScaler\n",
+    "\n",
+    "numeric_transformer = make_pipeline(\n",
+    "    SimpleImputer(strategy=\"mean\"),\n",
+    "    StandardScaler(),\n",
+    ")\n",
+    "\n",
+    "categorical_transformer = make_pipeline(\n",
+    "    SimpleImputer(strategy=\"most_frequent\"),\n",
+    "    OneHotEncoder(handle_unknown=\"ignore\"),\n",
+    ")\n",
+    "\n",
+    "transformer = ColumnTransformer(\n",
+    "    transformers=[\n",
+    "        (\n",
+    "            \"numeric\",\n",
+    "            numeric_transformer,\n",
+    "            make_column_selector(dtype_exclude=\"object\"),\n",
+    "        ),\n",
+    "        (\n",
+    "            \"categorical\",\n",
+    "            categorical_transformer,\n",
+    "            [\"island\"],\n",
+    "        ),\n",
+    "    ],\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['__abstractmethods__',\n",
-       " '__annotations__',\n",
-       " '__class__',\n",
-       " '__delattr__',\n",
-       " '__dict__',\n",
-       " '__dir__',\n",
-       " '__doc__',\n",
-       " '__eq__',\n",
-       " '__format__',\n",
-       " '__ge__',\n",
-       " '__getattribute__',\n",
-       " '__getitem__',\n",
-       " '__getstate__',\n",
-       " '__gt__',\n",
-       " '__hash__',\n",
-       " '__init__',\n",
-       " '__init_subclass__',\n",
-       " '__le__',\n",
-       " '__lt__',\n",
-       " '__module__',\n",
-       " '__ne__',\n",
-       " '__new__',\n",
-       " '__reduce__',\n",
-       " '__reduce_ex__',\n",
-       " '__repr__',\n",
-       " '__setattr__',\n",
-       " '__setstate__',\n",
-       " '__sizeof__',\n",
-       " '__sklearn_clone__',\n",
-       " '__str__',\n",
-       " '__subclasshook__',\n",
-       " '__weakref__',\n",
-       " '_abc_impl',\n",
-       " '_add_prefix_for_feature_names_out',\n",
-       " '_build_request_for_signature',\n",
-       " '_call_func_on_transformers',\n",
-       " '_check_feature_names',\n",
-       " '_check_n_features',\n",
-       " '_columns',\n",
-       " '_doc_link_module',\n",
-       " '_doc_link_template',\n",
-       " '_doc_link_url_param_generator',\n",
-       " '_get_default_requests',\n",
-       " '_get_doc_link',\n",
-       " '_get_empty_routing',\n",
-       " '_get_feature_name_out_for_transformer',\n",
-       " '_get_metadata_request',\n",
-       " '_get_param_names',\n",
-       " '_get_params',\n",
-       " '_get_remainder_cols',\n",
-       " '_get_remainder_cols_dtype',\n",
-       " '_get_tags',\n",
-       " '_hstack',\n",
-       " '_iter',\n",
-       " '_log_message',\n",
-       " '_more_tags',\n",
-       " '_parameter_constraints',\n",
-       " '_record_output_indices',\n",
-       " '_remainder',\n",
-       " '_replace_estimator',\n",
-       " '_repr_html_',\n",
-       " '_repr_html_inner',\n",
-       " '_repr_mimebundle_',\n",
-       " '_required_parameters',\n",
-       " '_set_params',\n",
-       " '_sk_visual_block_',\n",
-       " '_sklearn_auto_wrap_output_keys',\n",
-       " '_transformer_to_input_indices',\n",
-       " '_transformers',\n",
-       " '_update_fitted_transformers',\n",
-       " '_validate_column_callables',\n",
-       " '_validate_data',\n",
-       " '_validate_names',\n",
-       " '_validate_output',\n",
-       " '_validate_params',\n",
-       " '_validate_remainder',\n",
-       " '_validate_transformers',\n",
-       " 'fit',\n",
-       " 'fit_transform',\n",
-       " 'force_int_remainder_cols',\n",
-       " 'get_feature_names_out',\n",
-       " 'get_metadata_routing',\n",
-       " 'get_params',\n",
-       " 'n_features_in_',\n",
-       " 'n_jobs',\n",
-       " 'named_transformers_',\n",
-       " 'output_indices_',\n",
-       " 'remainder',\n",
-       " 'set_output',\n",
-       " 'set_params',\n",
-       " 'sparse_output_',\n",
-       " 'sparse_threshold',\n",
-       " 'transform',\n",
-       " 'transformer_weights',\n",
-       " 'transformers',\n",
-       " 'transformers_',\n",
-       " 'verbose',\n",
-       " 'verbose_feature_names_out']"
+       "array([-0.88708123,  0.78774251, -1.42248782, -0.56578921,  0.        ,\n",
+       "        0.        ,  1.        ])"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "dir(label_transformer)"
+    "td = transformer.fit_transform(df)\n",
+    "td[0]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df2 = pd.DataFrame([[\"Torgersen2\", 39.1, 18.7, 181.0, 3750.0, \"MALE\"]], columns=list(df.columns))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
-     "ename": "AttributeError",
-     "evalue": "'list' object has no attribute 'map'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[28], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;66;03m# label_transformer.transform([[\"Adelie\"]])\u001b[39;00m\n\u001b[0;32m----> 2\u001b[0m \u001b[43mlabel_transformer\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mnamed_transformers_\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mspecies\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m]\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mcategories_\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mmap\u001b[49m(\u001b[38;5;28;01mlambda\u001b[39;00m x: x[\u001b[38;5;241m0\u001b[39m])\n",
-      "\u001b[0;31mAttributeError\u001b[0m: 'list' object has no attribute 'map'"
-     ]
+     "data": {
+      "text/plain": [
+       "array([[-0.88708123,  0.78774251, -1.42248782, -0.56578921,  0.        ,\n",
+       "         0.        ,  0.        ]])"
+      ]
+     },
+     "execution_count": 49,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "# label_transformer.transform([[\"Adelie\"]])\n",
-    "label_transformer.named_transformers_[\"species\"].categories_"
+    "transformer.transform(df2)"
    ]
   },
   {
