--- a/program/metaflow/mlflow.ipynb
+++ b/program/metaflow/mlflow.ipynb
@@ -2,20 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n",
-      "The dotenv extension is already loaded. To reload it, use:\n",
-      "  %reload_ext dotenv\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2\n",
@@ -25,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,14 +30,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Model version: 12\n"
+      "Model version: 13\n"
      ]
     }
    ],
@@ -66,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -107,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -118,11 +107,9 @@
       "Handling request...\n",
       "Transforming payload...\n",
       "Making a prediction using the transformed payload...\n",
-      "\u001b[1m1/1\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 29ms/step\n",
-      "{'predictions': [[0.0066620041616261005, 0.004577756859362125, 0.988760232925415]]}\n",
+      "\u001b[1m1/1\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 24ms/step\n",
       "Processing prediction received from the model...\n",
-      "{'prediction': 'Gentoo', 'confidence': 0.988760232925415}\n",
-      "{\"prediction\": \"Gentoo\", \"confidence\": 0.988760232925415}\n"
+      "[{'prediction': 'Gentoo', 'confidence': 0.99058026}, {'prediction': 'Adelie', 'confidence': 0.59697014}, {'prediction': 'Adelie', 'confidence': 0.9887262}]\n"
      ]
     }
    ],
@@ -153,14 +140,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'predictions': [{'prediction': 'Gentoo', 'confidence': 0.9905802607536316}, {'prediction': 'Adelie', 'confidence': 0.5539652109146118}, {'prediction': 'Adelie', 'confidence': 0.9887261986732483}]}\n"
+      "{'predictions': [{'prediction': 'Gentoo', 'confidence': 0.9299716949462891}, {'prediction': 'Gentoo', 'confidence': 0.3634946644306183}, {'prediction': 'Adelie', 'confidence': 0.9896042346954346}]}\n"
      ]
     }
    ],
@@ -210,14 +197,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'predictions': [{'prediction': 'Adelie', 'confidence': 0.9802069067955017}]}\n"
+      "{'predictions': [{'prediction': 'Adelie', 'confidence': 0.9879838228225708}]}\n"
      ]
     }
    ],
