--- a/program/metaflow/mlflow.ipynb
+++ b/program/metaflow/mlflow.ipynb
@@ -37,7 +37,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Model version: 13\n"
+      "Model version: 27\n"
      ]
     }
    ],
@@ -103,13 +103,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Loading context...\n",
+      "Loading model context...\n",
+      "Model is ready to receive requests...\n",
       "Handling request...\n",
       "Transforming payload...\n",
       "Making a prediction using the transformed payload...\n",
-      "\u001b[1m1/1\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 24ms/step\n",
+      "\u001b[1m1/1\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 22ms/step\n",
       "Processing prediction received from the model...\n",
-      "[{'prediction': 'Gentoo', 'confidence': 0.99058026}, {'prediction': 'Adelie', 'confidence': 0.59697014}, {'prediction': 'Adelie', 'confidence': 0.9887262}]\n"
+      "[{'prediction': 'Gentoo', 'confidence': 0.9278518}, {'prediction': 'Gentoo', 'confidence': 0.506096}, {'prediction': 'Adelie', 'confidence': 0.9875431}]\n"
      ]
     }
    ],
