--- a/program/metaflow/metaflow.ipynb
+++ b/program/metaflow/metaflow.ipynb
@@ -113,25 +113,15 @@
     "1. Knowledge distillation example\n",
     "1. Model compression example\n",
     "1. Test-time augmentation example\n",
-    "1. Adversarial validation example\n"
+    "1. Adversarial validation example\n",
+    "1. Human-in-the-loop example\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n",
-      "The dotenv extension is already loaded. To reload it, use:\n",
-      "  %reload_ext dotenv\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2\n",
@@ -871,7 +861,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -975,7 +965,7 @@
        "4       3450.0  FEMALE  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -983,9 +973,11 @@
    "source": [
     "from pathlib import Path\n",
     "import pandas as pd\n",
+    "import numpy as np\n",
     "\n",
     "location = Path(\"../penguins.csv\")\n",
     "df = pd.read_csv(location)\n",
+    "df[\"sex\"] = df[\"sex\"].replace(\".\", np.nan)\n",
     "df.head()"
    ]
   },
@@ -1037,7 +1029,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1090,7 +1082,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1103,34 +1095,71 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(344, 10)"
+       "array([-0.88708123,  0.78774251, -1.42248782, -0.56578921,  0.        ,\n",
+       "        0.        ,  1.        ,  0.        ,  1.        ])"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "x.shape"
+    "x[0]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df2 = pd.DataFrame(\n",
-    "    [[\"Torgersen2\", 39.1, 18.7, 181.0, 3750.0, \"MALE\"]],\n",
-    "    columns=list(df.columns),\n",
+    "from keras import Input\n",
+    "from keras.layers import Dense\n",
+    "from keras.models import Sequential\n",
+    "from keras.optimizers import SGD\n",
+    "\n",
+    "model = Sequential(\n",
+    "    [\n",
+    "        # TODO: I thought we needed 10 inputs here?\n",
+    "        Input(shape=(9,)),\n",
+    "        Dense(10, activation=\"relu\"),\n",
+    "        Dense(8, activation=\"relu\"),\n",
+    "        Dense(3, activation=\"softmax\"),\n",
+    "    ],\n",
+    ")\n",
+    "\n",
+    "model.compile(\n",
+    "    optimizer=SGD(learning_rate=0.01),\n",
+    "    loss=\"sparse_categorical_crossentropy\",\n",
+    "    metrics=[\"accuracy\"],\n",
     ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<keras.src.callbacks.history.History at 0x358888a00>"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model.fit(x, y, verbose=0, epochs=1, batch_size=32)\n"
    ]
   },
   {
@@ -2037,6 +2066,51 @@
    ],
    "source": [
     "predictions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "input_example = {\n",
+    "    \"island\": \"Biscoe\",\n",
+    "    \"culmen_length_mm\": 48.6,\n",
+    "    \"culmen_depth_mm\": 16.0,\n",
+    "    \"flipper_length_mm\": 230.0,\n",
+    "    \"body_mass_g\": 5800.0,\n",
+    "    \"sex\": \"MALE\",\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "inputs: \n",
+       "  ['island': string (required), 'culmen_length_mm': double (required), 'culmen_depth_mm': double (required), 'flipper_length_mm': double (required), 'body_mass_g': double (required), 'sex': string (required)]\n",
+       "outputs: \n",
+       "  ['prediction': string (required), 'confidence': double (required)]\n",
+       "params: \n",
+       "  None"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from mlflow.models import infer_signature\n",
+    "\n",
+    "infer_signature(\n",
+    "    model_input=input_example, model_output={\"prediction\": \"Adelie\", \"confidence\": 0.90}\n",
+    ")"
    ]
   },
   {
