--- a/program/metaflow/mlflow.ipynb
+++ b/program/metaflow/mlflow.ipynb
@@ -37,7 +37,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Model version: 27\n"
+      "Model version: 70\n"
      ]
     }
    ],
@@ -108,9 +108,9 @@
       "Handling request...\n",
       "Transforming payload...\n",
       "Making a prediction using the transformed payload...\n",
-      "\u001b[1m1/1\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 22ms/step\n",
+      "\u001b[1m1/1\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 25ms/step\n",
       "Processing prediction received from the model...\n",
-      "[{'prediction': 'Gentoo', 'confidence': 0.9278518}, {'prediction': 'Gentoo', 'confidence': 0.506096}, {'prediction': 'Adelie', 'confidence': 0.9875431}]\n"
+      "[{'prediction': 'Gentoo', 'confidence': 0.99685186}, {'prediction': 'Adelie', 'confidence': 0.43640086}, {'prediction': 'Adelie', 'confidence': 0.9769831}]\n"
      ]
     }
    ],
@@ -257,7 +257,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.6"
+   "version": "3.10.11"
   }
  },
  "nbformat": 4,
