--- a/program/metaflow/mlflow.ipynb
+++ b/program/metaflow/mlflow.ipynb
@@ -37,7 +37,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Model version: 70\n"
+      "Model version: 79\n"
      ]
     }
    ],
@@ -100,17 +100,27 @@
    "metadata": {},
    "outputs": [
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2024/08/14 09:14:44 WARNING mlflow.utils.requirements_utils: Detected one or more mismatches between the model's dependencies and the current Python environment:\n",
+      " - keras (current: 3.5.0, required: keras==3.4.1)\n",
+      "To fix the mismatches, call `mlflow.pyfunc.get_model_dependencies(model_uri)` to fetch the model's environment and install dependencies using the resulting environment file.\n"
+     ]
+    },
+    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "Loading model context...\n",
       "Model is ready to receive requests...\n",
       "Handling request...\n",
+      "Here is the config: {'DATABASE': 'penguins'}\n",
       "Transforming payload...\n",
       "Making a prediction using the transformed payload...\n",
       "\u001b[1m1/1\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 25ms/step\n",
       "Processing prediction received from the model...\n",
-      "[{'prediction': 'Gentoo', 'confidence': 0.99685186}, {'prediction': 'Adelie', 'confidence': 0.43640086}, {'prediction': 'Adelie', 'confidence': 0.9769831}]\n"
+      "[{'prediction': 'Gentoo', 'confidence': 0.98472404}, {'prediction': 'Adelie', 'confidence': 0.4495708}, {'prediction': 'Adelie', 'confidence': 0.87418383}]\n"
      ]
     }
    ],
