--- a/program/cohort.ipynb
+++ b/program/cohort.ipynb
@@ -1423,7 +1423,8 @@
     "        with tarfile.open(f\"{(model_path / 'model.tar.gz').as_posix()}\", \"w:gz\") as tar:\n",
     "            tar.add(Path(directory) / \"target.joblib\", arcname=\"target.joblib\")\n",
     "            tar.add(\n",
-    "                Path(directory) / \"features.joblib\", arcname=\"features.joblib\",\n",
+    "                Path(directory) / \"features.joblib\",\n",
+    "                arcname=\"features.joblib\",\n",
     "            )\n",
     "\n",
     "\n",
@@ -2094,7 +2095,7 @@
    ],
    "source": [
     "%%ipytest -s\n",
-    "#| code-fold: true\n",
+    "# | code-fold: true\n",
     "\n",
     "import os\n",
     "import shutil\n",
@@ -2104,34 +2105,35 @@
     "from processing.script import preprocess\n",
     "from training.script import train\n",
     "\n",
+    "\n",
     "@pytest.fixture(scope=\"function\", autouse=False)\n",
     "def directory():\n",
     "    directory = tempfile.mkdtemp()\n",
     "    input_directory = Path(directory) / \"input\"\n",
     "    input_directory.mkdir(parents=True, exist_ok=True)\n",
     "    shutil.copy2(DATA_FILEPATH, input_directory / \"data.csv\")\n",
-    "    \n",
+    "\n",
     "    directory = Path(directory)\n",
-    "    \n",
+    "\n",
     "    preprocess(base_directory=directory)\n",
     "    train(\n",
     "        model_directory=directory / \"model\",\n",
-    "        train_path=directory / \"train\", \n",
+    "        train_path=directory / \"train\",\n",
     "        validation_path=directory / \"validation\",\n",
     "        pipeline_path=directory / \"model\",\n",
     "        experiment=None,\n",
-    "        epochs=1\n",
+    "        epochs=1,\n",
     "    )\n",
-    "    \n",
+    "\n",
     "    yield directory\n",
-    "    \n",
+    "\n",
     "    shutil.rmtree(directory)\n",
     "\n",
     "\n",
     "def test_train_bundles_model_assets(directory):\n",
     "    bundle = os.listdir(directory / \"model\")\n",
     "    assert \"001\" in bundle\n",
-    "    \n",
+    "\n",
     "    assets = os.listdir(directory / \"model\" / \"001\")\n",
     "    assert \"saved_model.pb\" in assets\n",
     "\n",
@@ -2186,9 +2188,9 @@
    ],
    "source": [
     "%%writefile {CODE_FOLDER}/training/requirements.txt\n",
-    "#| label: requirements.txt\n",
-    "#| filename: requirements.txt\n",
-    "#| code-line-numbers: false\n",
+    "# | label: requirements.txt\n",
+    "# | filename: requirements.txt\n",
+    "# | code-line-numbers: false\n",
     "\n",
     "comet_ml"
    ]
@@ -2461,11 +2463,11 @@
     "# | filename: requirements.txt\n",
     "# | code-line-numbers: true\n",
     "\n",
-    "sagemaker-training\n",
+    "sagemaker - training\n",
     "packaging\n",
     "keras\n",
     "pandas\n",
-    "scikit-learn\n",
+    "scikit - learn\n",
     "comet_ml\n",
     "jax[cpu]"
    ]
@@ -5170,8 +5172,8 @@
    ],
    "source": [
     "%%writefile {CODE_FOLDER}/pipeline/preprocessing_component.py\n",
-    "#| filename: preprocessing_component.py\n",
-    "#| code-line-numbers: true\n",
+    "# | filename: preprocessing_component.py\n",
+    "# | code-line-numbers: true\n",
     "\n",
     "import os\n",
     "import pandas as pd\n",
@@ -5301,7 +5303,7 @@
    ],
    "source": [
     "%%ipytest\n",
-    "#| code-fold: true\n",
+    "# | code-fold: true\n",
     "\n",
     "from pipeline.preprocessing_component import input_fn, predict_fn, output_fn, model_fn\n",
     "\n",
@@ -5312,16 +5314,16 @@
     "    input_directory = Path(directory) / \"input\"\n",
     "    input_directory.mkdir(parents=True, exist_ok=True)\n",
     "    shutil.copy2(DATA_FILEPATH, input_directory / \"data.csv\")\n",
-    "    \n",
+    "\n",
     "    directory = Path(directory)\n",
-    "    \n",
+    "\n",
     "    preprocess(base_directory=directory)\n",
-    "    \n",
+    "\n",
     "    with tarfile.open(directory / \"model\" / \"model.tar.gz\") as tar:\n",
     "        tar.extractall(path=directory / \"model\")\n",
-    "    \n",
+    "\n",
     "    yield directory / \"model\"\n",
-    "    \n",
+    "\n",
     "    shutil.rmtree(directory)\n",
     "\n",
     "\n",
@@ -5329,22 +5331,24 @@
     "    input_data = \"\"\"\n",
     "    Adelie, Torgersen, 39.1, 18.7, 181, 3750, MALE\n",
     "    \"\"\"\n",
-    "    \n",
+    "\n",
     "    df = input_fn(input_data, \"text/csv\")\n",
     "    assert len(df.columns) == 6 and \"species\" not in df.columns\n",
     "\n",
     "\n",
     "def test_input_json_drops_target_column_if_present():\n",
-    "    input_data = json.dumps({\n",
-    "        \"species\": \"Adelie\", \n",
-    "        \"island\": \"Torgersen\",\n",
-    "        \"culmen_length_mm\": 44.1,\n",
-    "        \"culmen_depth_mm\": 18.0,\n",
-    "        \"flipper_length_mm\": 210.0,\n",
-    "        \"body_mass_g\": 4000.0,\n",
-    "        \"sex\": \"MALE\"\n",
-    "    })\n",
-    "    \n",
+    "    input_data = json.dumps(\n",
+    "        {\n",
+    "            \"species\": \"Adelie\",\n",
+    "            \"island\": \"Torgersen\",\n",
+    "            \"culmen_length_mm\": 44.1,\n",
+    "            \"culmen_depth_mm\": 18.0,\n",
+    "            \"flipper_length_mm\": 210.0,\n",
+    "            \"body_mass_g\": 4000.0,\n",
+    "            \"sex\": \"MALE\",\n",
+    "        }\n",
+    "    )\n",
+    "\n",
     "    df = input_fn(input_data, \"application/json\")\n",
     "    assert len(df.columns) == 6 and \"species\" not in df.columns\n",
     "\n",
@@ -5353,21 +5357,23 @@
     "    input_data = \"\"\"\n",
     "    Torgersen, 39.1, 18.7, 181, 3750, MALE\n",
     "    \"\"\"\n",
-    "    \n",
+    "\n",
     "    df = input_fn(input_data, \"text/csv\")\n",
     "    assert len(df.columns) == 6\n",
     "\n",
     "\n",
     "def test_input_json_works_without_target_column():\n",
-    "    input_data = json.dumps({\n",
-    "        \"island\": \"Torgersen\",\n",
-    "        \"culmen_length_mm\": 44.1,\n",
-    "        \"culmen_depth_mm\": 18.0,\n",
-    "        \"flipper_length_mm\": 210.0,\n",
-    "        \"body_mass_g\": 4000.0,\n",
-    "        \"sex\": \"MALE\"\n",
-    "    })\n",
-    "    \n",
+    "    input_data = json.dumps(\n",
+    "        {\n",
+    "            \"island\": \"Torgersen\",\n",
+    "            \"culmen_length_mm\": 44.1,\n",
+    "            \"culmen_depth_mm\": 18.0,\n",
+    "            \"flipper_length_mm\": 210.0,\n",
+    "            \"body_mass_g\": 4000.0,\n",
+    "            \"sex\": \"MALE\",\n",
+    "        }\n",
+    "    )\n",
+    "\n",
     "    df = input_fn(input_data, \"application/json\")\n",
     "    assert len(df.columns) == 6\n",
     "\n",
@@ -5375,42 +5381,76 @@
     "def test_output_raises_exception_if_prediction_is_none():\n",
     "    with pytest.raises(Exception):\n",
     "        output_fn(None, \"application/json\")\n",
-    "    \n",
-    "    \n",
+    "\n",
+    "\n",
     "def test_output_returns_tensorflow_ready_input():\n",
-    "    prediction = np.array([\n",
-    "        [-1.3944109908736013,1.15488062669371,-0.7954340636549508,-0.5536447804097907,0.0,1.0,0.0],\n",
-    "        [1.0557485835338234,0.5040085971987002,-0.5824506029515057,-0.5851840035995248,0.0,1.0,0.0]\n",
-    "    ])\n",
-    "    \n",
+    "    prediction = np.array(\n",
+    "        [\n",
+    "            [\n",
+    "                -1.3944109908736013,\n",
+    "                1.15488062669371,\n",
+    "                -0.7954340636549508,\n",
+    "                -0.5536447804097907,\n",
+    "                0.0,\n",
+    "                1.0,\n",
+    "                0.0,\n",
+    "            ],\n",
+    "            [\n",
+    "                1.0557485835338234,\n",
+    "                0.5040085971987002,\n",
+    "                -0.5824506029515057,\n",
+    "                -0.5851840035995248,\n",
+    "                0.0,\n",
+    "                1.0,\n",
+    "                0.0,\n",
+    "            ],\n",
+    "        ]\n",
+    "    )\n",
+    "\n",
     "    response = output_fn(prediction, \"application/json\")\n",
-    "    \n",
+    "\n",
     "    assert response[0] == {\n",
     "        \"instances\": [\n",
-    "            [-1.3944109908736013,1.15488062669371,-0.7954340636549508,-0.5536447804097907,0.0,1.0,0.0],\n",
-    "            [1.0557485835338234,0.5040085971987002,-0.5824506029515057,-0.5851840035995248,0.0,1.0,0.0]\n",
+    "            [\n",
+    "                -1.3944109908736013,\n",
+    "                1.15488062669371,\n",
+    "                -0.7954340636549508,\n",
+    "                -0.5536447804097907,\n",
+    "                0.0,\n",
+    "                1.0,\n",
+    "                0.0,\n",
+    "            ],\n",
+    "            [\n",
+    "                1.0557485835338234,\n",
+    "                0.5040085971987002,\n",
+    "                -0.5824506029515057,\n",
+    "                -0.5851840035995248,\n",
+    "                0.0,\n",
+    "                1.0,\n",
+    "                0.0,\n",
+    "            ],\n",
     "        ]\n",
     "    }\n",
-    "    \n",
+    "\n",
     "    assert response[1] == \"application/json\"\n",
     "\n",
-    "    \n",
+    "\n",
     "def test_predict_transforms_data(directory):\n",
     "    input_data = \"\"\"\n",
     "    Torgersen, 39.1, 18.7, 181, 3750, MALE\n",
     "    \"\"\"\n",
-    "    \n",
+    "\n",
     "    model = model_fn(directory.as_posix())\n",
     "    df = input_fn(input_data, \"text/csv\")\n",
     "    response = predict_fn(df, model)\n",
     "    assert type(response) is np.ndarray\n",
-    "    \n",
+    "\n",
     "\n",
     "def test_predict_returns_none_if_invalid_input(directory):\n",
     "    input_data = \"\"\"\n",
     "    Invalid, 39.1, 18.7, 181, 3750, MALE\n",
     "    \"\"\"\n",
-    "    \n",
+    "\n",
     "    model = model_fn(directory.as_posix())\n",
     "    df = input_fn(input_data, \"text/csv\")\n",
     "    assert predict_fn(df, model) is None"
@@ -5448,8 +5488,8 @@
    ],
    "source": [
     "%%writefile {CODE_FOLDER}/pipeline/postprocessing_component.py\n",
-    "#| filename: postprocessing_component.py\n",
-    "#| code-line-numbers: true\n",
+    "# | filename: postprocessing_component.py\n",
+    "# | code-line-numbers: true\n",
     "\n",
     "import os\n",
     "import numpy as np\n",
@@ -5478,7 +5518,7 @@
     "def input_fn(input_data, content_type):\n",
     "    if content_type == \"application/json\":\n",
     "        return json.loads(input_data)[\"predictions\"]\n",
-    "    \n",
+    "\n",
     "    raise ValueError(f\"{content_type} is not supported.\")\n",
     "\n",
     "\n",
@@ -5492,6 +5532,7 @@
     "        (model[prediction], confidence)\n",
     "        for confidence, prediction in zip(confidence, predictions)\n",
     "    ]\n",
+    "\n",
     "\n",
     "def output_fn(prediction, accept):\n",
     "    if accept == \"text/csv\":\n",
@@ -5549,7 +5590,7 @@
    ],
    "source": [
     "%%ipytest\n",
-    "#| code-fold: true\n",
+    "# | code-fold: true\n",
     "\n",
     "import numpy as np\n",
     "\n",
@@ -5557,21 +5598,13 @@
     "\n",
     "\n",
     "def test_predict_returns_prediction_as_first_column():\n",
-    "    input_data = [\n",
-    "        [0.6, 0.2, 0.2], \n",
-    "        [0.1, 0.8, 0.1],\n",
-    "        [0.2, 0.1, 0.7]\n",
-    "    ]\n",
-    "    \n",
+    "    input_data = [[0.6, 0.2, 0.2], [0.1, 0.8, 0.1], [0.2, 0.1, 0.7]]\n",
+    "\n",
     "    categories = [\"Adelie\", \"Gentoo\", \"Chinstrap\"]\n",
-    "    \n",
+    "\n",
     "    response = predict_fn(input_data, categories)\n",
-    "    \n",
-    "    assert response == [\n",
-    "        (\"Adelie\", 0.6),\n",
-    "        (\"Gentoo\", 0.8),\n",
-    "        (\"Chinstrap\", 0.7)\n",
-    "    ]\n",
+    "\n",
+    "    assert response == [(\"Adelie\", 0.6), (\"Gentoo\", 0.8), (\"Chinstrap\", 0.7)]\n",
     "\n",
     "\n",
     "def test_output_does_not_return_array_if_single_prediction():\n",
@@ -6053,8 +6086,8 @@
    ],
    "source": [
     "%%writefile {CODE_FOLDER}/pipeline/inference.py\n",
-    "#| filename: inference.py\n",
-    "#| code-line-numbers: true\n",
+    "# | filename: inference.py\n",
+    "# | code-line-numbers: true\n",
     "\n",
     "import os\n",
     "import json\n",
@@ -6411,7 +6444,7 @@
    ],
    "source": [
     "%%ipytest -s\n",
-    "#| code-fold: true\n",
+    "# | code-fold: true\n",
     "\n",
     "import os\n",
     "import shutil\n",
@@ -6457,13 +6490,15 @@
     "\n",
     "@pytest.fixture(scope=\"function\", autouse=False)\n",
     "def payload():\n",
-    "    return json.dumps({\n",
-    "        \"island\": \"Biscoe\",\n",
-    "        \"culmen_length_mm\": 48.6,\n",
-    "        \"culmen_depth_mm\": 16.0,\n",
-    "        \"flipper_length_mm\": 230.0,\n",
-    "        \"body_mass_g\": 5800,\n",
-    "    }).encode(\"utf-8\")\n",
+    "    return json.dumps(\n",
+    "        {\n",
+    "            \"island\": \"Biscoe\",\n",
+    "            \"culmen_length_mm\": 48.6,\n",
+    "            \"culmen_depth_mm\": 16.0,\n",
+    "            \"flipper_length_mm\": 230.0,\n",
+    "            \"body_mass_g\": 5800,\n",
+    "        }\n",
+    "    ).encode(\"utf-8\")\n",
     "\n",
     "\n",
     "def test_handler_response_contains_prediction_and_confidence(directory, payload):\n",
@@ -7793,7 +7828,7 @@
    "outputs": [],
    "source": [
     "%%script false --no-raise-error\n",
-    "#| eval: false\n",
+    "# | eval: false\n",
     "\n",
     "deploy_model()"
    ]
@@ -8384,7 +8419,7 @@
    "outputs": [],
    "source": [
     "%%script false --no-raise-error\n",
-    "#| eval: false\n",
+    "# | eval: false\n",
     "\n",
     "deploy_model()"
    ]
